--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">九和</string>
+    <string name="app_name">九合</string>
     <string-array name="weeks">
         <item>星期一</item>
         <item>星期二</item>
